challenge10/part2/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web
spec:
  #ingressClassName: webapprouting.kubernetes.azure.com # if using app routing add-on
  ingressClassName: nginx # if using helm install
  rules:
  - host: mycustomfqdn.eastus2.cloudapp.azure.com
    http:
      paths:
      - backend:
          service:
            name: web
            port:
              number: 80
        path: /
        pathType: Prefix
